<resources>
    <string name="app_name">NoteApp</string>
    <string name="settings">settings</string>
    <string name="search">search</string>
    <string name="help">help</string>
    <string name="add_note">add</string>
    <string name="list">list</string>
    <string name="format">format</string>
    <string name="delete">delete</string>
    <string name="gallery">gallery</string>
    <string name="favorite">favorite</string>
    <string name="share">share</string>
    <string name="all_notes">All notes: </string>
    <string name="favorite_list">Favorite: </string>
    <string name="title_nav_bar">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item">Note_default</string>
    <string name="item_date">date_default</string>
    <string name="dialog_title_text">Are you sure you want to delete the note?</string>
    <string name="dialog_text_yes_button">Yes</string>
    <string name="dialog_text_no_button">No</string>

    <string-array name="notesName">
        <item>Note1</item>
        <item>Note2</item>
        <item>Note3</item>
        <item>Note4</item>
        <item>Note5</item>
        <item>Note6</item>
        <item>Note7</item>
        <item>Note8</item>
        <item>Note9</item>
        <item>Note10</item>
    </string-array>

    <string-array name="notesDescription">
        <item>Note1: some text</item>
        <item>Note2: some text</item>
        <item>Note3: some text</item>
        <item>Note4: some text</item>
        <item>Note5: some text</item>
        <item>Note6: some text</item>
        <item>Note7: some text</item>
        <item>Note8: some text</item>
        <item>Note9: some text</item>
        <item>Note10: some text</item>
    </string-array>

    <string-array name="notesDate">
        <item>01.01.2021</item>
        <item>02.02.2021</item>
        <item>03.03.2021</item>
        <item>04.04.2021</item>
        <item>05.05.2021</item>
        <item>06.06.2021</item>
        <item>07.07.2021</item>
        <item>08.08.2021</item>
        <item>09.09.2021</item>
        <item>10.10.2021</item>
    </string-array>

</resources>