<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never"
        android:orderInCategory="20" />

    <item
        android:title="@string/help"
        android:id="@+id/help"
        app:showAsAction="never"
        android:orderInCategory="30" />

    <item
        android:title="@string/search"
        android:id="@+id/search"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:title="@string/add_note"
        android:id="@+id/add_note"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_menu_add" />

</menu>